@@ -2,6 +2,7 @@ User johns
 Date:
 
     Release Version 0.5.0
+    Change audio/video delay with hot-key.
     Enable/disable/toggle fullscreen with hot-key (Feature #930).
 
 User: CafeDelMar
